CHANGES.TXT for Ublu Midrange and Mainframe Life Cycle Extension Language
Copyright (c) 2019, 2022, 2024 Jack J. Woehr jwoehr@softwoehr.com http://www.softwoehr.com
All rights reserved. Open Source, see LICENSE

2.0.3 2024-10-23
---------
* Libraries
	* Bump postgresql to 42.7.4
* Update SBOM

2.0.2 2024-08-05
-----
* Features
    * Add FORMAT_0400 back into CmdSpoolFOpenList
* Libraries
    * Bump postgresql to 42.7.3
    * Bump mssql-jdbc to 12.8.0
    * Bump jt400 to 20.0.7
* Userdoc
    * `db` accepts `-dbtype mssql`
* Misc
    * fix email address in pom.xml

2.0.1 2022-10-10
-----
* Commands
    * `lifo -show` now displays value and class as well as tuple name
    * comment out Format 400 from CmdSpoolFOpenList.java
      * will submit later to mainline source
* Examples
    * jsheety.ublu demos Jesse Gorzinki's JSheetyDriver
* Libraries
    * GitHub DependaBot bumps postgresql from 42.2.5 to 42.4.1
    * Use mainline jt400 instead of my modified version
* Userdoc
    * Updates to the Reference and User Guide
    * IBM i vs iSeries etc.
    * Installation under UserLAnd on Android 11
* Misc
    * Some cleanup prompted by various IDEs nagging me.

2.0.0 2022-02-01
-----
* Build
    * Maven now builds Ublu (thanks Jesse Gorzinski of IBM)
    * Builds from `make clean package` at command line
    * Builds from Eclipse and NetBeans
* System
    * Minor technical code mods

1.2.2 2020-03-28
-----
* Bugs
    * #22 Ublu would exit on missing nested include
* Commands
    * `gensh` cleanup comments
    * `server` now can set inetaddr (default main interface) and backlog (default 50)
* Docs
    * `job` cmd docs improved
* Examples
    * `recordCount.sh` cleanup
* Extensions
   * `sysshep.qsys2.system_status` typo reference `@stats` changed to `@@stats`

1.2.1 2018-12-03
-----
* Commands
    * `const -defined` .. also, `const` now takes any source data sink for name
    * `db`
        * `-usessl -ssl`
        * `-rdb ~@{rdbname}`
        * clarify schema vs database