@@ -11,7 +11,7 @@
   "Documenting usage of Ublu which is an extensible object-disoriented interpretive language for midrange and mainframe remote system programming"
   name="description">
   <meta http-equiv="Last-Modified" content=
-  "Thu, 4 Apr 2024 04:06:51 AM UTC">
+  "Wed, 20 Nov 2024 03:18:44 PM UTC">
   <link rel="stylesheet" type="text/css" href="ublujedit.css">
 </head>
 <body>
@@ -5198,14 +5198,8 @@ db -to @xyzdb -dbtype as400 -as400 @xyz -rdb ABC -connect
     features and refinements will follow.<br></p>
 
     <p><strong>Note</strong>: As configured, <code>db</code>
-    supports IBM i database and PostgreSQL. Support for Microsoft
-    SQL &reg; is also provided, if you care to download the JDBC
-    driver yourself: it is not included with the distribution,
-    which was, however, compiled to support the driver if present.
-    Follow the directions in the <code>README.DbMSSQL.txt</code>
-    file in the directory <code>share/mssql</code> .<br></p>
-    <em>Example</em> (<code>examples/dbexample.ublu</code>)
-
+    supports IBM i Db2 database, PostgreSQL. and Microsoft
+    SQL &reg;.
     <pre>
 <span class="syntax0"><span class=
 "syntax-COMMENT1">#</span><span class=
